cmake_minimum_required(VERSION 3.12)

# Название проекта
project(Semester_2)

# Добавление подпроектов
add_subdirectory(Lab_6)
add_subdirectory(Lab_7)
add_subdirectory(Lab_8)
add_subdirectory(Lab_9)
add_subdirectory(Lab_10)
add_subdirectory(Lab_11)
add_subdirectory(Lab_12)
add_subdirectory(Lab_13)
add_subdirectory(Lab_14)